# miniCUTE

./: .gitignore  .hlint.yaml  .mergify.yml  .stylish-haskell.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  Roadmap.md  YAML.md  hie.yaml  hlint.yaml  minicute.cabal  package.yaml  stack.yaml
.circleci/: README.md  config.yml
.gh-page-templates/: 404.html  index.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  refactoring.md  update_documents.md
.github/PULL_REQUEST_TEMPLATE/: add_features.md  fix_bugs.md  refactoring.md  update_documents.md
.github/workflows/: continuous_integration.yaml
abstractify/: README.md  package.yaml
abstractify/hlint/: Main.hs  hlint.yml
abstractify/test/Minicute/Transpilers/: GMachineSpec.hs
app/: Main.hs
base/: README.md  package.yaml
base/app/: Main.hs
base/hlint/: Main.hs  hlint.yml
base/lib/Minicute/Data/: Fix.hs
base/src/Minicute/Data/: Fix.hs
codegenerator/: README.md  package.yaml
codegenerator/hlint/: Main.hs
codegenerator/src/Minicute/Transpilers/: Generator.hs
common-syntax/: package.yaml
common-syntax/lib/Minicute/Data/: Common.hs  (+1 more)
compiler/: package.yaml
compiler/hlint/: Main.hs
executables/: README.md  package.yaml
executables/hlint/: Main.hs
extensions/: README.md  package.yaml
extensions/base/: README.md  package.yaml
extensions/base/hlint/: Main.hs
extensions/hlint/: Main.hs
extensions/prettyprinter/: README.md  package.yaml
fixture/: example01.gm  example02.gm  example03.gm  fib_naive.gm  infinite.gm  test.gm
g-machine-interpreter/: package.yaml
g-machine-interpreter/hlint/: Main.hs
g-machine-interpreter/minicute-g/: Main.hs
g-machine-syntax/: README.md  package.yaml
g-machinizer/: package.yaml
hlint/: Main.hs  hlint.yml
llvm/: .gitignore  test.ll
llvm-generator/: package.yaml
llvm-generator/hlint/: Main.hs
main-packages/common-syntax/: README.md  package.yaml
main-packages/g-machine-interpreter/: Design.md  README.md  package.yaml
main-packages/g-machine-interpreter/hlint/: Main.hs
main-packages/g-machine-interpreter/minicute-g/: Main.hs
main-packages/g-machine-syntax/: README.md  package.yaml
main-packages/g-machinizer/: README.md  package.yaml
main-packages/g-machinizer/hlint/: Main.hs
main-packages/llvm-generator/: README.md  package.yaml
main-packages/minicute-compiler/: README.md  package.yaml
main-packages/minicute-compiler/hlint/: Main.hs
main-packages/minicute-compiler/minicute/: Main.hs  Options.hs  Usage.hs
main-packages/minicute-optimizer/: README.md  package.yaml
main-packages/minicute-syntax/: README.md  package.yaml
main-packages/minicute-syntax/hlint/: Main.hs
minicute/: README.md  package.yaml
minicute-compiler/: README.md  package.yaml
minicute-compiler/hlint/: Main.hs
minicute-compiler/minicute/: Main.hs
minicute-optimizer/: README.md  package.yaml
minicute-syntax/: README.md  package.yaml
minicute/hlint/: Main.hs
parser/: README.md  package.yaml
parser/hlint/: Main.hs
runtime/: .gitignore  Doxyfile  Makefile  README.md  runtime.c
runtime/config/: clean.mk  support_check.mk
runtime/lib/: machine.c  machine.h  node.c  node.h  runtime.c  runtime.h  user.h
runtime/makefiles/: clean.mk  exe_ext.mk  support_check.mk
runtime/scratch/: scratch.ll
runtime/src/: runtime.h
runtime/test/: test.ll
scripts/: stylish-haskell.bat  stylish-haskell.ps1  stylish-haskell.sh
src/Data/String/: Minicute.hs
src/Data/Tuple/: Minicute.hs
src/Minicute/: PrettyPrintable.hs
src/Minicute/Common/: Expression.hs  Program.hs  Value.hs
src/Minicute/Data/: Fix.hs  PrintSequence.hs  String.hs  Tuple.hs
src/Minicute/Interpreter/: Evaluator.hs
src/Minicute/Parser/: Common.hs  Lexer.hs  Parser.hs  Precedence.hs  Types.hs
src/Minicute/Transpiler/: FreeVariables.hs  LambdaLifting.hs  VariablesRenaming.hs
src/Minicute/Transpilers/: FreeVariables.hs  GMachine.hs  Generator.hs  LambdaLifting.hs  VariablesRenaming.hs
src/Minicute/Types/: Expression.hs  Program.hs
src/Minicute/Utils/: TH.hs
test-packages/common-syntax/: README.md  package.yaml
test-packages/minicute-syntax/: README.md  package.yaml
test-packages/minicute-syntax/hlint/: Main.hs
test/Minicute/: PrettyPrintableSpec.hs  PrettySpec.hs
test/Minicute/Interpreter/: EvaluatorSpec.hs
test/Minicute/Parser/: LexerSpec.hs  ParserSpec.hs  TestUtils.hs
test/Minicute/Transpiler/: FreeVariablesSpec.hs  LambdaLiftingSpec.hs  VariablesRenamingSpec.hs
test/Minicute/Transpilers/: FreeVariablesSpec.hs  GMachineSpec.hs  GeneratorSpec.hs  LambdaLiftingSpec.hs  VariablesRenamingSpec.hs
test/Test/Minicute/: Utils.hs
utilities/hlint/: README.md  package.yaml
utilities/hlint/hlint/: Main.hs
utilities/hlint/hlint-run/: Main.hs
(+176 files in other folders)
