name:                minicute
version:             0.1.0.0
cabal-version:       >= 2.0
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           2018-present Junyoung Clare Jang
author:              Junyoung Clare Jang
maintainer:          jjc9310@gmail.com
stability:           experimental
homepage:            https://github.com/CUTE-Lang/minicute#readme
bug-reports:         https://github.com/CUTE-Lang/minicute/issues
-- package-url:
synopsis:            Experimental package for a language implemented by Haskell
description:         This package is only for experiment to implement CUTE Lang.
                     Do not use this any other purpose. This package would
                     introduce breaking changes without any notifications.
category:            Language
tested-with:         GHC >= 8.0.1
-- data-files:
-- data-dir:
extra-source-files:  README.md
-- extra-doc-files:
-- extra-tmp-files:

library
  exposed-modules:     Minicute.Common.Expression
                     , Minicute.Common.Program
                     , Minicute.Parser.Lexer
                     , Minicute.Parser.Parser
  -- virtual-modules:
  -- exposed:
  -- reexported-modules:
  -- signatures:

  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 6.5 && < 7
  -- other-modules:
  hs-source-dirs:      src
  -- default-extensions:
  -- other-extensions:
  -- build-tool-depends:
  -- buildable:
  -- ghc-options:
  -- ghc-prof-options:
  -- ghc-shared-options:
  -- includes:
  -- install-includes:
  -- include-dirs:
  -- c-sources:
  -- cxx-sources:
  -- asm-sources:
  -- cmm-sources:
  -- js-sources:
  -- extra-libraries:
  -- extra-ghci-libraries:
  -- extra-bundled-libraries:
  -- extra-lib-dirs:
  -- cc-options:
  -- cpp-options:
  -- cxx-options:
  -- ld-options:
  -- pkgconfig-depends:
  -- frameworks:
  -- extra-frameworks-dirs:
  -- mixins:

  default-language:    Haskell2010

executable minicute
  main-is:             Main.hs
  -- scope:

  build-depends:       base
                     , minicute
  -- other-modules:
  hs-source-dirs:      app
  -- default-extensions:
  -- other-extensions:
  -- build-tool-depends:
  -- buildable:
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  -- ghc-prof-options:
  -- ghc-shared-options:
  -- includes:
  -- install-includes:
  -- include-dirs:
  -- c-sources:
  -- cxx-sources:
  -- asm-sources:
  -- cmm-sources:
  -- js-sources:
  -- extra-libraries:
  -- extra-ghci-libraries:
  -- extra-bundled-libraries:
  -- extra-lib-dirs:
  -- cc-options:
  -- cpp-options:
  -- cxx-options:
  -- ld-options:
  -- pkgconfig-depends:
  -- frameworks:
  -- extra-frameworks-dirs:
  -- mixins:

  default-language:    Haskell2010

test-suite minicute-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  -- test-module:

  build-depends:       base
                     , megaparsec
                     , minicute
                     , hspec
  other-modules:       Minicute.Parser.LexerSpec
  hs-source-dirs:      test
  -- default-extensions:
  -- other-extensions:
  -- build-tool-depends:
  -- buildable:
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  -- ghc-prof-options:
  -- ghc-shared-options:
  -- includes:
  -- install-includes:
  -- include-dirs:
  -- c-sources:
  -- cxx-sources:
  -- asm-sources:
  -- cmm-sources:
  -- js-sources:
  -- extra-libraries:
  -- extra-ghci-libraries:
  -- extra-bundled-libraries:
  -- extra-lib-dirs:
  -- cc-options:
  -- cpp-options:
  -- cxx-options:
  -- ld-options:
  -- pkgconfig-depends:
  -- frameworks:
  -- extra-frameworks-dirs:
  -- mixins:

  default-language:    Haskell2010

benchmark minicute-bench
  type:                exitcode-stdio-1.0
  main-is:             Bench.hs

  build-depends:       base
                     , minicute
  -- other-modules:
  hs-source-dirs:      bench
  -- default-extensions:
  -- other-extensions:
  -- build-tool-depends:
  -- buildable:
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  -- ghc-prof-options:
  -- ghc-shared-options:
  -- includes:
  -- install-includes:
  -- include-dirs:
  -- c-sources:
  -- cxx-sources:
  -- asm-sources:
  -- cmm-sources:
  -- js-sources:
  -- extra-libraries:
  -- extra-ghci-libraries:
  -- extra-bundled-libraries:
  -- extra-lib-dirs:
  -- cc-options:
  -- cpp-options:
  -- cxx-options:
  -- ld-options:
  -- pkgconfig-depends:
  -- frameworks:
  -- extra-frameworks-dirs:
  -- mixins:

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/CUTE-Lang/minicute
  -- module:
  -- branch:
  -- tag:
  -- subdir:
